for testing: read JSON from file; extract tags from pocket data

--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -23,6 +23,7 @@ library
                     , data-default
                     , bytestring
                     , text
+                    , unordered-containers
                     , aeson
                     , conduit
                     , conduit-extra
