some restructuring and improvement

--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -26,6 +26,7 @@ library
                     , unordered-containers
                     , aeson
                     , conduit
+                    , conduit-combinators
                     , conduit-extra
                     , http-client
                     , http-client-tls
