--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -32,6 +32,7 @@ library
                     , http-client-tls
                     , http-conduit
                     , http-types
+                    , yaml
   default-language:   Haskell2010
 
 executable fco-client
