--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -1,6 +1,6 @@
 name:                 fco-client
 version:              0.1.0.0
-synopsis:             explore variuos Haskell idioms and patterns
+synopsis:             client functionality: access data providers/endpoints/servers
 description:          see README.md
 homepage:             http://www.functionalconcepts.org
 license:              MIT
@@ -49,6 +49,7 @@ test-suite fco-client-test
   other-modules:      Fco.Client.ClientSpec
   main-is:            Spec.hs
   build-depends:      base
+                    , containers
                     , fco-client
                     , hspec
   ghc-options:        -threaded -rtsopts -with-rtsopts=-N
