use Fco.Core package for config loading and lookup

--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -33,6 +33,7 @@ library
                     , http-conduit
                     , http-types
                     , yaml
+                    , fco-core
   default-language:   Haskell2010
 
 executable fco-client
