--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -51,6 +51,7 @@ test-suite fco-client-test
   main-is:            Spec.hs
   build-depends:      base
                     , containers
+                    , unordered-containers
                     , fco-client
                     , hspec
   ghc-options:        -threaded -rtsopts -with-rtsopts=-N
