--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -19,19 +19,23 @@ library
   build-depends:      base
                     , base-compat
                     , basic-prelude
-                    , containers
-                    , data-default
-                    , bytestring
-                    , text
-                    , unordered-containers
                     , aeson
+                    , bytestring
+                    , containers
                     , conduit
                     , conduit-combinators
                     , conduit-extra
+                    , cryptonite
+                    , data-default
+                    , data-hash
+                    , ghc
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
+                    , memory
+                    , text
+                    , unordered-containers
                     , yaml
                     , fco-core
   default-language:   Haskell2010
