--- a/fco-client.cabal
+++ b/fco-client.cabal
@@ -1,5 +1,5 @@
 name:                 fco-client
-version:              0.1.0.0
+version:              0.1.0.1
 synopsis:             client functionality: access data providers/endpoints/servers
 description:          see README.md
 homepage:             http://www.functionalconcepts.org
@@ -37,6 +37,7 @@ library
                     , text
                     , unordered-containers
                     , yaml
+                    , fco-actor
                     , fco-core
   default-language:   Haskell2010
 
