--- a/stack.yaml
+++ b/stack.yaml
@@ -7,6 +7,7 @@ resolver: lts-11.22
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- '../fco-actor'
 - '../fco-core'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
